 * The following Carbon functions now return objects to the pipeline instead of writing output to the host:
     * [Grant-Permission](http://get-carbon.org/help/Grant-Permission.html)

## Enhancements

### Computer

 * Changed [Test-OSIs32Bit](http://get-carbon.org/help/Test-OSIs32Bit.html) and [Test-OSIs64Bit](http://get-carbon.org/help/Test-OSIs64Bit.html) functions to use the Environment class's new [Is64BitOperatingSystem](http://msdn.microsoft.com/en-us/library/system.environment.is64bitoperatingsystem.aspx) property.

### PowerShell

 * Changed [Test-PowerShellIs32Bit](http://get-carbon.org/help/Test-PowerShellIs32Bit.html) and [Test-PowerShellIs64Bit](http://get-carbon.org/help/Test-PowerShellIs64Bit.html) functions to use the Environment class's new [Is64BitProcess](http://msdn.microsoft.com/en-us/library/system.environment.is64bitprocess.aspx) property.
 * Removed `Complete-Job` function.  It was total crap.
 
### Security

 * [Grant-Permission](http://get-carbon.org/help/Grant-Permission.html) now only grants permissions on an object if those permissions aren't present.  To preserve previous behaviour, add the `-Force` switch to all `Grant-Permission` usages.
 * [Grant-Permission](http://get-carbon.org/help/Grant-Permission.html) returns `System.Security.AccessControl.FileSystemRule` or `System.Security.AccessControl.RegistryRule` whenever it updates an item's permissions.  It no longer writes a message to the host.


### Users and Groups

 * Re-wrote [Install-User](http://get-carbon.org/help/Test-DotNet.html) to use [DirectoryEntry](http://msdn.microsoft.com/en-us/library/system.directoryservices.directoryentry.aspx) .NET class instead of the `net.exe` command-line program.
 * Added `PasswordExpires` switch to [Install-User](http://get-carbon.org/help/Test-DotNet.html) for creating accounts with passwords that expire.

# 1.6.1

## Bug Fixes

### Shares
